operators/multiclusterobservability/manifests/anonymous-grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multicluster-observability-anonymous-grafana
  name: grafana
  namespace: open-cluster-management-observability
spec:
  ports:
  - name: grafana-http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: multicluster-observability-anonymous-grafana
  type: ClusterIP
