operators/multiclusterobservability/manifests/anonymous-grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anonymous-grafana
  namespace: open-cluster-management-observability
spec:
  port:
    targetPort: grafana-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: anonymous-grafana
